added github in footer

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </main>
         <br />
         <footer>
-            Coded By: Robin A.
+            <a href="https://github.com/ARobin2288/RobinsWeatherApp">Open-source code</a> by Robin Andrews
         </footer>
     </div>
     <script src="index.js"></script>
