--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
         </main>
         <br />
         <footer>
-            <a href="https://github.com/ARobin2288/RobinsWeatherApp">Open-source code</a> by Robin Andrews
+            <a href="https://github.com/ARobin2288/RobinsWeatherApp">Open-source code</a>
+             by Robin Andrews
         </footer>
     </div>
     <script src="index.js"></script>
